--- a/.gitignore
+++ b/.gitignore
@@ -168,12 +168,9 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+# PyCharm 프로젝트 설정 폴더
+# 개인 PC마다 설정 값이 다르기 때문에 gitignore에 추가
+.idea/
 
 # Abstra
 # Abstra is an AI-powered process automation framework.
@@ -208,3 +205,6 @@ firebase_service_key.json
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# macOS 시스템 파일
+.DS_Store
