--- a/requirements.txt
+++ b/requirements.txt
@@ -23,4 +23,11 @@ google-generativeai>=0.3.0
 # 시간대 처리 (시차적응 알고리즘)
 pytz>=2024.1
 
+# 테스트
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
+pytest-mock>=3.11.1
+httpx>=0.25.0
+
 
