--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,9 @@ httpx>=0.25.0
 # LLM (Gemini API)
 google-generativeai>=0.3.0
 
+# Amadeus API
+amadeus>=9.0.0
+
 # 시간대 처리 (시차적응 알고리즘)
 pytz>=2024.1
 
