--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,10 @@ firebase-admin>=6.3.0
 # 인증 및 보안
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
+bcrypt==3.2.2
 
 # HTTP 클라이언트 (Kakao API 호출용)
-httpx>=0.25.0
+httpx>=0.25.0,<0.28.0
 
 # LLM (Gemini API)
 google-generativeai>=0.3.0
@@ -28,6 +29,6 @@ pytest>=7.4.0
 pytest-asyncio>=0.21.0
 pytest-cov>=4.1.0
 pytest-mock>=3.11.1
-httpx>=0.25.0
+
 
 
