--- a/.gitignore
+++ b/.gitignore
@@ -198,10 +198,15 @@ firebase_service_key.json
 # PyPI configuration file
 .pypirc
 
+# macOS
+.DS_Store
+**/.DS_Store
+
 # Cursor
 #  Cursor is an AI-powered code editor. `.cursorignore` specifies files/directories to
 #  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
 #  refer to https://docs.cursor.com/context/ignore-files
+.cursor/
 .cursorignore
 .cursorindexingignore
 
